2005-11-15  Russell Bryant <russell@digium.com>

	* doc/README.variables: Add application exit status variables

2005-11-14  Josh Roberson <josh@asteirasgi.com>
	
	* manager.c: Fix crash on variable passing from AMI originate (issue #5737)

2005-11-14  Russell Bryant  <russell@digium.com>

	* many files: Merge doxygen documentation updates. (issue #5605)

	* apps/app_dial.c: Fix typo in RetryDial description.

2005-11-12  Russell Bryant  <russell@digium.com>

	* channels/chan_oss.c: Fix a typo in an error message.

2005-11-11  Kevin P. Fleming  <kpfleming@digium.com>

	* Asterisk 1.2.0-rc2 released.
	
2005-11-11  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/chan_sip.c (thread_safe_rand): ensure that threads don't get the same random number (issue #5712)

	* apps/app_voicemail.c (forward_message): correct bugs in message forwarding (issue #5718)
	(copy_message): use correct path for locking (issue #5704)

	* apps/app_dial.c (wait_for_answer): correct flag copying for automon feature (issue #5720)

	* channels/chan_iax2.c: correct comment

	* apps/app_voicemail.c (close_mailbox): correct previous commit (issue #5663)
	(vm_change_password): fix password change writing (issue #5721)

	* channels/chan_sip.c (transmit_invite): remove useless debug message; don't try to add OSP tokens to OPTIONS pings

	* apps/app_voicemail.c (close_mailbox): properly remove deleted messages at mailbox close time (issue #5663)

2005-11-11  Mark Spencer <markster@digium.com>

	* channels/chan_zap.c (zt_bridge): only enable/disable DTMF detection on SUB_REAL channels

2005-11-10  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/chan_iax2.c: ensure that system headers that provide basic types are included first (issue #5713)

2005-11-11  Russell Bryant  <russell@digium.com>

	* many files in apps/: Clean up application descriptions. Clarify some wording and make sure they wrap at 80 characters.

2005-11-10  Mark Spencer <markster@digium.com>
